@@ -93,10 +93,10 @@ all_by_module = {
                              'EnvironHeaders', 'CombinedMultiDict',
                              'run_wsgi_app', 'get_host', 'responder',
                              'SharedDataMiddleware', 'ClosingIterator',
-                             'FileStorage', 'url_unquote_plus',
+                             'FileStorage', 'url_unquote_plus', 'url_decode',
                              'url_unquote', 'get_current_url', 'redirect',
                              'append_slash_redirect', 'lazy_property',
-                             'MultiDict', 'url_decode'],
+                             'MultiDict', 'DispatcherMiddleware'],
     'werkzeug.http':        ['Accept', 'CacheControl', 'parse_accept_header',
                              'parse_cache_control_header',
                              'HTTP_STATUS_CODES'],
