@@ -10,6 +10,9 @@ Version 0.2
 - Added `werkzeug.contrib.securecookie`
 - Exceptions have a ``get_response()`` method that return a resposne object
 - fixed the path ordering bug (#293), thanks Thomas Johansson
+- BaseReporterStream is now part of the werkzeug contrib module.  With
+  Werkzeug 0.3 onwards you will have to import it from there.
+- added DispatcherMiddleware.
 
 
 Version 0.1
